# open-pdf-toolkit

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.pull.yml  docker-compose.yml
.github/workflows/: publish.yml
backend/: Dockerfile  package-lock.json  package.json
backend/src/: server.js
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  tools.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: ConvertTool.jsx  HomeGrid.jsx  ImageTools.jsx  MergeTool.jsx  PageGrid.jsx  PdfEditor.jsx  RotateTool.jsx  SplitTool.jsx  ToolShell.jsx  Toolbar.jsx
frontend/src/utils/: pdfUtils.js
pyservice/: Dockerfile  requirements.txt
pyservice/app/: converter.py  server.py
