[package]
name = "open-pdf-toolkit"
version = "0.1.0"
description = "Açık kaynaklı PDF düzenleme ve dönüştürme aracı - masaüstü sarıcı"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "open_pdf_toolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
